--- a/CovidCave.Rmd
+++ b/CovidCave.Rmd
@@ -5,22 +5,118 @@ date: "26/10/2020"
 output: html_document
 ---
 
+# Dr D's COVID Cave
+
+## Creating Some Faceted Maps
+
+### Setting Everything Up
+
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(sf)
+library(geojsonio)
+library(tmap)
 ```
 
+```{r dataSetup}
+#load covid data from the UK Government Website
+COVID_MSOA <- read_csv("https://coronavirus.data.gov.uk/downloads/msoa_data/MSOAs_latest.csv")
+
+#*Data Cleaning Task
+#*
+#*Think about how we could useful re-code -99 
+#*which currently codes cases between 0-2
+#*it might be that a new re-coded column is created in the
+#*long tidy version of the data
 
 
-```{r cars}
-summary(cars)
+#get some boundaries
+#super-generalised url to geojson
+url <- "https://opendata.arcgis.com/datasets/87aa4eb6393644768a5f85929cc704c2_0.geojson"
+
+#read those boundaries into an sf() object for plotting
+UK_MSOA <- geojson_sf(url)
 ```
 
-## Including Plots
+### Joining boundaries and data together
 
-You can also embed plots, for example:
+```{r mapJoin}
+#join the MSOA boundaries to the data
+MSOA_COVID_Map <- UK_MSOA %>% 
+  merge(.,
+        COVID_MSOA,
+        by.x="MSOA11CD",
+        by.y="msoa11_cd")
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## First Test Map
+
+```{r quickMap, echo=FALSE}
+#make a very quick and dirty interactive map of week 41
+tmap_mode("view")
+tm_shape(MSOA_COVID_Map) +
+  tm_fill(col = "wk_41", style="jenks")
+```
+
+An alternative with ggplot2
+
+```{r ggplotMap}
+#here's a quick and dirty map with a continuous scale
+#using ggplot2
+ggplot(data = MSOA_COVID_Map,aes(fill=wk_41)) +
+  geom_sf(color='transparent') +
+  scale_fill_viridis_c(option = 'plasma')
+```
+
+## Creating Some Faceted Maps
+
+Check the data looks OK first
+
+```{r CheckDataTypes}
+types <- sapply(MSOA_COVID_Map, class)
+```
+
+The data we want to plot starts from column 9 onwards therefore, pivot from column 9 onwards:
+
+```{r pivotLong}
+MSOA_COVID_Long <- COVID_MSOA %>% 
+  pivot_longer(.,
+               c(9:46))
+```
+
+Now re-merge the boundary geometries to the long file:
+
+```{r reMerge}
+MSOA_COVID_Map_Long <- UK_MSOA %>% 
+  merge(.,
+        MSOA_COVID_Long,
+        by.x="MSOA11CD",
+        by.y="msoa11_cd")
+```
+
+Now plot a faceted map using ggplot facet map
+
+```{r facetMap}
+ggplot(data = MSOA_COVID_Map_Long,aes(fill=value)) +
+  geom_sf(color='transparent') +
+  scale_fill_viridis_c(option = 'plasma')+
+  facet_wrap(~name)
+```
+
+We could try ranging the data like Rich Harris did:
+
+```{r}
+range(MSOA_COVID_Map_Long$value)
+#create a new rank column
+MSOA_COVID_Map_Long$value_rank <- rank(MSOA_COVID_Map_Long$value)
+```
+
+Now plot a ranked faceted map using ggplot facet map and lets go for 4 rows this time like Rich did...
+
+```{r}
+ggplot(data = MSOA_COVID_Map_Long,aes(fill=value_rank)) +
+  geom_sf(color='transparent') +
+  scale_fill_viridis_c(option = 'plasma')+
+  facet_wrap(~name, nrow = 4)
+```
