--- a/CovidCave.Rmd
+++ b/CovidCave.Rmd
@@ -5,22 +5,66 @@ date: "26/10/2020"
 output: html_document
 ---
 
+# Dr D's COVID Cave
+
+## Creating Some Faceted Maps
+
+### Setting Everything Up
+
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(sf)
+library(geojsonio)
+library(tmap)
 ```
 
+```{r data setup}
+#load covid data from the UK Government Website
+COVID_MSOA <- read_csv("https://coronavirus.data.gov.uk/downloads/msoa_data/MSOAs_latest.csv")
+
+#*Data Cleaning Task
+#*
+#*Think about how we could useful re-code -99 
+#*which currently codes cases between 0-2
+#*it might be that a new re-coded column is created in the
+#*long tidy version of the data
 
 
-```{r cars}
-summary(cars)
+#get some boundaries
+#super-generalised url to geojson
+url <- "https://opendata.arcgis.com/datasets/87aa4eb6393644768a5f85929cc704c2_0.geojson"
+
+#read those boundaries into an sf() object for plotting
+UK_MSOA <- geojson_sf(url)
 ```
 
-## Including Plots
+### Joining boundaries and data together
 
-You can also embed plots, for example:
+```{r map join}
+#join the MSOA boundaries to the data
+MSOA_COVID_Map <- UK_MSOA %>% 
+  merge(.,
+        COVID_MSOA,
+        by.x="MSOA11CD",
+        by.y="msoa11_cd")
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## First Test Map
+
+```{r quick map, echo=FALSE}
+#make a very quick and dirty interactive map of week 41
+tmap_mode("view")
+tm_shape(MSOA_COVID_Map) +
+  tm_fill(col = "wk_41", style="jenks")
+```
+
+An alternative with ggplot2
+
+```{r}
+#here's a quick and dirty map with a continuous scale
+#using ggplot2
+ggplot(data = MSOA_COVID_Map,aes(fill=wk_41)) +
+  geom_sf(color='transparent') +
+  scale_fill_viridis_c(option = 'plasma')
+```
