--- a/CovidCave.Rmd
+++ b/CovidCave.Rmd
@@ -51,7 +51,7 @@ MSOA_COVID_Map <- UK_MSOA %>%
 
 ## First Test Map
 
-```{r quick map, echo=FALSE}
+```{r quickMap, echo=FALSE}
 #make a very quick and dirty interactive map of week 41
 tmap_mode("view")
 tm_shape(MSOA_COVID_Map) +
@@ -118,42 +118,5 @@ ggplot(data = MSOA_COVID_Map_Long,aes(fill=value_rank)) +
   geom_sf(color='transparent') +
   scale_fill_viridis_c(option = 'plasma')+
   facet_wrap(~name, nrow = 4)
-
-#get some boundaries
-#super-generalised url to geojson
-url <- "https://opendata.arcgis.com/datasets/87aa4eb6393644768a5f85929cc704c2_0.geojson"
-
-#read those boundaries into an sf() object for plotting
-UK_MSOA <- geojson_sf(url)
 ```
 
-### Joining boundaries and data together
-
-```{r map join}
-#join the MSOA boundaries to the data
-MSOA_COVID_Map <- UK_MSOA %>% 
-  merge(.,
-        COVID_MSOA,
-        by.x="MSOA11CD",
-        by.y="msoa11_cd")
-
-```
-
-## First Test Map
-
-```{r quick map, echo=FALSE}
-#make a very quick and dirty interactive map of week 41
-tmap_mode("view")
-tm_shape(MSOA_COVID_Map) +
-  tm_fill(col = "wk_41", style="jenks")
-```
-
-An alternative with ggplot2
-
-```{r}
-#here's a quick and dirty map with a continuous scale
-#using ggplot2
-ggplot(data = MSOA_COVID_Map,aes(fill=wk_41)) +
-  geom_sf(color='transparent') +
-  scale_fill_viridis_c(option = 'plasma')
-```
