--- a/CovidCave.Rmd
+++ b/CovidCave.Rmd
@@ -149,5 +149,14 @@ msoa_pop <- read_excel(file.path("./data",filename), sheet="Mid-2019 Persons", s
 
 msoa_pop <- clean_names(msoa_pop)
 
-summary(msoa_pop)
+```
+
+Now we can join this population at risk data to our COVID-19 case data. The following code chunk selects just the 'all_ages' column from the msoa_pop population data and joins it using left join to the pivoted 'tidy' long version of the COVID-19 case data:
+
+```{r mergePopData}
+
+MSOA_COVID_Long <- left_join(MSOA_COVID_Long,
+                              msoa_pop %>% select(msoa_code,all_ages),
+                              by = c("msoa11_cd" = "msoa_code"))
+  
 ```
